# mldsdl_sundog

./: .gitignore  README.md  pyproject.toml  requirements copy.txt  requirements.txt  run.sh  settings.json
labs/: 01_StdDevVariance.ipynb  03_Distributions.ipynb  04_Percentiles.ipynb  05_Moments.ipynb  06_MatPlotLib.ipynb  07_Seaborn.ipynb  08_CovarianceCorrelation.ipynb  09_ConditionalProbabilityExercise.ipynb  0_MeanMedianExercise.ipynb  10_LinearRegression.ipynb  11_PolynomialRegression.ipynb  12_MultipleRegression.ipynb  13_TrainTest.ipynb  14_NaiveBayes.ipynb  15_KMeans.ipynb
